--- a/style.css
+++ b/style.css
@@ -14,15 +14,21 @@ html, body {
 .sub-banner1{
     font-size: 24px;
     color: #F9FAF8;
+    padding-left: 10px;
+    /* background-color: #3882F6; */
+    height: 100px;
 }
 
 .sub-banner2{
+    /* background-color: #3882F6; */
     display: flex;
     justify-content: space-around;
+    padding-right: 25px;
     align-items: center;
     gap: 20px;
     font-size: 18px;
     color: #E5E7EB;
+    height: 100px;
 }
 
 .Header-First-Row{
@@ -99,6 +105,55 @@ button{
     align-items: center;
     padding-bottom: 35px;
 }
+
+.second-banner{
+    height: 500px;
+    margin-top: -20px;
+}
+
+.second-banner-header{
+    /* background-color:aquamarine; */
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+}
+
+.second-banner-thread{
+    display: flex;
+    justify-content: center;
+    /* background-color: bisque; */
+    height: 250px;
+    gap:40px;
+    align-items: center;
+}
+
+.image-text{
+    /* background-color: yellowgreen; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.bimg{
+    /* background-color: #3882F6; */
+    height: 220px;
+    width: 250px;
+    border-radius: 10px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.btext{
+    /* background-color:tomato; */
+    height: 50px;
+    width: 250px;
+    text-align: center;
+    display: flex;
+    align-items: flex-end;
+    /* margin-top: -15px; */
+}
+
 
 
 
