--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ button{
     display: flex;
     justify-content: center;
     font-size: 28px;
+    padding-bottom: 30px;;
 }
 
 .second-banner-thread{
@@ -146,14 +147,104 @@ button{
 
 .btext{
     /* background-color:tomato; */
-    height: 50px;
+    height: 150px;
     width: 250px;
     text-align: center;
     display: flex;
-    align-items: flex-end;
-    /* margin-top: -15px; */
+    align-items: flex-top;
+    margin-top: -30px;
 }
 
+.third-banner{
+    height: 300px;
+    /* margin-top: -20px; */
+    background-color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
+.quote-text{
+    /* background-color: #E5E7EB; */
+    width: 800px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 20px;
+}
 
+.author{
+    /* background-color: #F9FAF8; */
+    display: flex;
+    width: 750px;
+    margin-top: -30px;
+    justify-content: right;
+    padding-right: 0px;
+}
 
+.author-name{
+    font-size: 35px;
+}
+
+.fourth-banner{
+    height: 400px;
+    /* margin-top: -20px; */
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding-top: 40px;
+    align-items: center;
+}
+
+.left-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: centre;
+    /* background-color: chocolate; */
+    width: 450px;
+    padding-left: 40px;
+    /* padding-right: 150px; */
+    height: 200px;
+    padding-bottom: 50px;
+    /* font-size: 20px; */
+}
+
+.banner-border{
+    display: flex;
+    background-color: #3882F6;
+    height:250px;
+    border-radius: 20px;
+}
+
+.signup-button{
+    /* background-color: aquamarine; */
+    width:450px;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.left-header{
+    /* background-color: #3882F6; */
+    /* display: flex; */
+    font-size: 28px;
+    height:150px;
+    color: #E5E7EB;
+    padding-left: 20px;
+    /* align-items: flex-end; */
+    margin-top: 30px;
+}
+
+.left-subtext{
+    color: #E5E7EB;
+    display: flex;
+    margin-top: -100px;
+    padding-left: 20px;
+    /* background-color:blueviolet ; */
+
+}
